After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691932 - gnome-terminal gets in an endless loop on mouse buttons 6 and 7 (scroll-wheel tilt left/right here)
gnome-terminal gets in an endless loop on mouse buttons 6 and 7 (scroll-wheel...
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-17 10:28 UTC by Yanko Kaneti
Modified: 2013-01-17 13:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtraces somewhere in the loop (6.77 KB, text/plain)
2013-01-17 13:15 UTC, Yanko Kaneti
Details

Description Yanko Kaneti 2013-01-17 10:28:04 UTC
gnome-terminal 3.7.1 as found in Fedora rawhide starts spinning and becomes non-responsive  when I press mouse buttons 6 and 7 (scroll-wheel left and right tilt on my mouse) 

terminal_notebook_scroll_event is always in the bt
Comment 1 Christian Persch 2013-01-17 13:06:40 UTC
Can you attach a backtrace, please (bt full)?
Comment 2 Yanko Kaneti 2013-01-17 13:15:28 UTC
Created attachment 233670 [details]
backtraces somewhere in the loop
Comment 3 Christian Persch 2013-01-17 13:56:27 UTC
Fixed on master.