notebook: Fix parent class handler

Fix a stupid typo bug.

https://bugzilla.gnome.org/show_bug.cgi?id=691932